@@ -67,6 +67,7 @@ private:
 
   // Data members, this is for example purposes only
   Source m_src;
+  Source m_src2x2;
 
 };
 
